# autotrack

./: .gitignore  .prettierignore  LICENCE  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  prettier.config.cjs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  nouvelle-fonctionnalité.md  rapport-de-bug.md
.github/workflows/: release.yaml
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-10-27-194420_create_profiles/: up.sql
src-tauri/migrations/2024-10-28-094151_create_profiles/: down.sql  up.sql
src-tauri/migrations/2024-10-29-134936_create_vehicles/: down.sql  up.sql
src-tauri/migrations/2024-10-30-201537_create_inspections/: down.sql  up.sql
src-tauri/migrations/2024-11-01-160342_create_maintenance/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  models.rs  repositories.rs  schema.rs
src-ui/components/: DatePicker.vue  ProfileLayout.vue  VehicleLayout.vue
src-ui/composables/: use-maintenance.ts  use-profile.ts  use-vehicle.ts
src-ui/layouts/: profile-layout.vue  profiles-layout.vue
src-ui/middleware/: profile-middleware.ts
src-ui/models/: maintenance.ts  profile.ts  vehicle.ts
src-ui/pages/: index.vue
src-ui/plugins/: 02.import-export-service.ts  05.maintenance-service.ts  06.maintenance-booklet-service.ts  force-color-mode.ts  import-export-service.ts  maintenance-service.ts  profile-service.ts  vehicle-service.ts
src-ui/stores/: profile-store.ts  selected-profile.ts
src-ui/utils/: index.ts
(+17 files in other folders)
